--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "shipping-label-wizard",
+  "homepage": "http://andventuree.github.io/form-wizard",
+  "name": "form-wizard",
   "version": "0.1.0",
-  "private": true,
   "dependencies": {
     "node-sass": "^4.14.1",
     "react": "^16.5.2",
@@ -12,7 +12,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -23,5 +25,7 @@
     "not ie <= 11",
     "not op_mini all"
   ],
-  "devDependencies": {}
+  "devDependencies": {
+    "gh-pages": "^3.0.0"
+  }
 }
